[package]
edition = "2021"
name    = "mmr-verifier"
version = "0.1.0"

[dependencies]
# crates.io
array-bytes        = { version = "*" }
blake2-rfc         = { version = "*" }
mmr                = { package = "ckb-merkle-mountain-range", git = "https://github.com/darwinia-network/merkle-mountain-range", branch = "public" }
parity-scale-codec = { version = "*" }
serde              = { version = "*", features = ["derive"] }
serde_json         = { version = "*" }
subrpcer           = { version = "*", features = ["ureq-client"] }
tungstenite        = { version = "*", features = ["rustls-tls-native-roots"] }
